# XMining

./: .gitattributes  .gitignore  CMakeLists.txt  README  binloader.c  deviceapi.c  driver-avalonmm.c  driver-bitforce.c  driver-getwork.c  driver-littlefury.c  driver-opencl.c  dynclock.c  lowlevel.h  miner.c  ocl.c  util.c  util.h
cmake/: CMakeLists.txt  globals.cmake  macros.cmake
cmake/windows/: memmem.c  strings.h  unistd.h
scripts/: CMakeLists.txt
scripts/docker/: delete.all.ps1  list.images.ps1
scripts/docker/ubuntu/: Dockerfile  bash.ps1  build.ps1  create.image.ps1  project.ps1
scripts/ubuntu/: build.sh  publish.sh
scripts/windows/: build.bat  create.bat  devminer.bat  project.bat  visual_studio.bat
